// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component renders a label 1`] = `
@media  {
  .c-dpNEPi {
    color: var(--colors-grey900);
    font-family: var(--fonts-body);
    margin: 0;
  }
}

@media  {
  .c-dpNEPi-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dpNEPi-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dpNEPi-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-dpNEPi-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }
}

<div>
  <label
    class="c-dpNEPi c-dpNEPi-gvmVBy-size-md c-dpNEPi-grKRUr-type-block"
  >
    TEXT
  </label>
</div>
`;

exports[`Label component renders an inline label 1`] = `
@media  {
  .c-dpNEPi {
    color: var(--colors-grey900);
    font-family: var(--fonts-body);
    margin: 0;
  }
}

@media  {
  .c-dpNEPi-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dpNEPi-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dpNEPi-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-dpNEPi-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-dpNEPi-bsbHzT-type-inline {
    display: flex;
    font-weight: 400;
    max-width: max-content;
  }
}

@media  {
  .c-dpNEPi-jroWjL-cv {
    align-items: center;
  }

  .c-dpNEPi-ejCoEP-cv {
    flex-direction: row;
  }
}

<div>
  <label
    class="c-dpNEPi c-dpNEPi-gvmVBy-size-md c-dpNEPi-bsbHzT-type-inline c-dpNEPi-jroWjL-cv c-dpNEPi-ejCoEP-cv"
  >
    TEXT
  </label>
</div>
`;
